Player generator for Mafia done + README.

--- a/MafiaTool/MafiaTool.csproj
+++ b/MafiaTool/MafiaTool.csproj
@@ -32,10 +32,9 @@
       <None Update="Data">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Data\" />
+      <None Update="Data\roles.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
