--- a/MafiaToolRelease/nlog.config
+++ b/MafiaToolRelease/nlog.config
@@ -12,7 +12,7 @@
         <target xsi:type="ColoredConsole"
                 enableAnsiOutput="true"
                 name="lifetimeConsole"
-                layout="${longdate} ${level:uppercase=true:padding=-5} ${threadid:padding=-2:fixedlength=true} ${logger:shortName=true:padding=-32:fixedlength=true} ${message} ${newline} ${exception:format=tostring}">
+                layout="${longdate} ${level:uppercase=true:padding=-5} ${threadid:padding=-2:fixedlength=true} ${logger:shortName=true:padding=-32:fixedlength=true} ${message} ${exception:format=tostring}">
             <highlight-row
                     condition="level == LogLevel.Trace"
                     foregroundColor="Gray" />
@@ -37,7 +37,7 @@
         <target name="fileLog" type="AsyncWrapper" queueLimit="5000" overflowAction="Block">
             <target type="File"
                     fileName="logs/${shortdate}.txt"
-                    layout="${longdate};${level};${threadid};${logger};${message};${newline}${exception:format=tostring}"
+                    layout="${longdate};${level};${threadid};${logger};${message};${exception:format=tostring}"
                     archiveFileName="../logs/{#}.zip"
                     maxArchiveFiles="${FileLogStoreDays}"
                     archiveDateFormat="yyyy-MM-dd"
