--- a/MafiaTool/MafiaTool.csproj
+++ b/MafiaTool/MafiaTool.csproj
@@ -14,6 +14,7 @@
         <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
         <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
         <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
+        <ApplicationIcon>Assets\Images\mafia_icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -44,6 +45,14 @@
       <Resource Include="Assets\Images\mafia_icon.png">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </Resource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="Views\MafiaGamePage.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
